--- a/views/dashboard/main.ejs
+++ b/views/dashboard/main.ejs
@@ -1,23 +1,11 @@
 <%- include('../partials/header.ejs') %>
 <header>
-    <h1>Ola Laura</h1>
+    <h1>Bem Vindo(a) <%= name %></h1> <a href="/logoff">Sair</a>
 </header>
 
 
 <div class="container-dashboard">
-    <div class="container-perfomance">
-        <div class="ex">
-            <h2>Exercicios Feitos</h2>
-            <h2>8965</h2>
-        </div>
-    </div>
-     <h2>Materias</h2>
-     <div>materias aqui</div>
-
-     <h2>Materias Para Treinar</h2>
-     <div class="math">
-        <h2 class="h2-bg">Matematica</h2>
-     </div>
+    
 </div>
 
 <%- include('../partials/footer.ejs') %>
