--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,8 @@
 }
 
 header{
+    display: flex;
+    justify-content: space-between;
     padding: 10px;
     background-color: white;
     margin-bottom: 30px;
@@ -21,7 +23,7 @@ h1{
 .container{
     margin: auto;
     padding: 10px;
-    width: 70%;
+    width: 30%;
     background-color: white;
     position: absolute;
     top: 50%;
@@ -29,13 +31,21 @@ h1{
     transform: translate(-50%,-50%);
 
 }
+form{
+    padding: 5px;
+}
 input{
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+}
+.input{
     border: 1px blue solid;
     width: 100%;
     border-radius: 5px;
-    outline: none;
+   
+   
 }
 button{
     padding: 10px;
