--- a/views/dashboard/main.ejs
+++ b/views/dashboard/main.ejs
@@ -5,7 +5,32 @@
 
 
 <div class="container-dashboard">
+    <h2>Produtos Disponiveis</h2>
+
     
+    <h3>Contas</h3>
+    <select name="" id="">
+        <option value="">Sociais</option>
+        <option value="">Jogos</option>
+    </select>
+    <div class="card-product">
+        <div class="bg-product"></div>
+        <div class="info">
+            <p class="name-product">Contas Free Fire</p>
+            <p class="pricing">R$ 2</p>
+            <button>Ver Mais</button>
+        </div>
+
+
+        <div class="card-product">
+            <div class="bg-product"></div>
+            <div class="info">
+                <p class="name-product">Contas Email Outllok </p>
+                <p class="pricing">R$ 0,05 por conta</p>
+                <button>Ver Mais</button>
+            </div>
+        
+    </div>
 </div>
 
 <%- include('../partials/footer.ejs') %>
