--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,3 +89,26 @@ button{
     border: 1px blue solid;
     border-radius: 5px;
 }
+.card-product{
+ border-radius: 10px 10px 0px 0px;
+  border: 2px solid rgba(213, 208, 208, 0.589);
+}
+.bg-product{
+  height: 150px;
+  background-image: url('https://tm.ibxk.com.br/2023/11/07/07164428263318.jpg');
+  background-size: cover;
+  border-radius: 10px 10px 0px 0px;
+  background-position: center;
+}
+.name-product{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+    font-size: 18px;
+}
+.pricing{
+    color: blue;
+    font-size: 1.5em;
+}
+.info{
+    padding: 10px;
+}
