--- a/views/dashboard/main.ejs
+++ b/views/dashboard/main.ejs
@@ -1,9 +1,13 @@
 <%- include('../partials/header.ejs') %>
 <header>
-    <h1>Bem Vindo(a) <%= name %></h1> <a href="/logoff">Sair</a>
+    <h2>Bem Vindo(a) <%= name %></h2> <img src="/img/more.png" id="mn">
 </header>
-
-
+<main>
+<div class="menu" id="fclose">
+    <div class="mn-item"><a href="">Historico</a></div>
+    <div class="mn-item"><a href="">Recarga</a></div>
+    <div class="mn-item"> <a href="/logoff">Sair</a> </div>
+</div>
 <div class="container-dashboard">
     <h2>Produtos Disponiveis</h2>
 
@@ -20,7 +24,8 @@
             <p class="pricing">R$ 2</p>
             <button>Ver Mais</button>
         </div>
-
+    </div>
+       
 
         <div class="card-product">
             <div class="bg-product"></div>
@@ -29,8 +34,13 @@
                 <p class="pricing">R$ 0,05 por conta</p>
                 <button>Ver Mais</button>
             </div>
+        </div>
+    
+
+
         
     </div>
 </div>
-
+</main>
+<script src="/js/dash.js"></script>
 <%- include('../partials/footer.ejs') %>
